--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,12 @@ body {
     text-align: left;
 }
 
+.nav-link {
+    font-size: 28px;
+    color: darkslategray;
+    
+}
+
 #hero-image {
     height: 500px;
     width: 100%;
