--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,15 @@ body {
     color: darkslategray;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 #logo {
     font-family: 'Satisfy', cursive;
     font-size: 28px;
@@ -60,8 +69,11 @@ body {
     display: inline-flexbox;
     height: 450px;
     padding-left: 30px;
+    padding-right: 30px;
     font-size: 36px;
     color: lightsalmon;
+    text-align: center;
+    flex-direction: column;
 }
 
 .content a {
@@ -90,6 +102,7 @@ text-center {
     vertical-align: middle;
     padding: 20px;
     float: left;
+    overflow: hidden;
 }
 
 h2 {
@@ -103,7 +116,9 @@ h1 {
   font-weight: 100;
   font-size: 2.8em;
   color: darkslategray
+  
 }
+
 #form-container {
     background-color: lightsalmon;
     height: 300px;
