--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,6 @@ html,body
 .content {
     display: inline-flexbox;
     height: 300px;
-    padding-left: 30px;
     padding-right: 30px;
     font-size: 36px;
     color: lightsalmon;
@@ -125,6 +124,12 @@ h1 {
   
 }
 
+#form {
+    width: 400px;
+    margin: auto;
+    position: relative;
+  }
+
 #form-container {
     background-color: lightsalmon;
     height: 500px;
@@ -147,6 +152,10 @@ h1 {
     font-size: 18px;
     margin: 60, 0;
     font-family: 'Times New Roman', Times, serif;
+}
+
+button, input {
+    overflow: hidden;
 }
 
 
@@ -180,6 +189,7 @@ h1 {
 .col {
     padding-bottom: 10px;
     padding-top: 10px;
+    overflow: scroll;
 }
 
 
