--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ html,body
 .navbar {
     background-color: lightsalmon;
     margin: 0px;
-    
+    color: darkslategray;
 }
 
 .navbar-brand {
@@ -40,10 +40,6 @@ html,body
 .navbar-dark .navbar-nav .nav-link{
     color: darkslategray;
 }
-
-
-
-
 
 
 .navbar-toggler-icon {
