--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ html,body
     
 }
 
-.navbar-dark .navbar-nav .nav-link{
+.navbar-dark .navbar-nav .nav-link {
     color: darkslategray;
 }
 
@@ -130,15 +130,16 @@ h1 {
 }
 
 #form {
-    width: 400px;
     margin: auto;
     position: relative;
+    display: block;
   }
 
 #form-container {
     background-color: lightsalmon;
     height: 500px;
     width: auto;
+    margin: auto;
 }
 
 #form-container h1 {
@@ -198,6 +199,32 @@ button, input {
 
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    body {
+
+        width: auto;
+
+    }
+       
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #form {
+        width: 400px;
+        margin: auto;
+        position: relative;
+        display: block;
+      }
+
+}
+
+
 
 
 
@@ -240,6 +267,12 @@ ul.social-media {
     margin: 0;
     
 }
+
+@media (max-device-width: 320px) {
+
+
+    
+   }
 
 
 
